# crab-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/backend/: database_storage.rs  mod.rs
src/commands/: enrollment.rs  mod.rs
